--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</style>
 	</head>
 	<body>
+		<p>面积调整系数</p>
 		<input type="text" id="num">
 		<span class="submit" style="margin-left: 20px;cursor: pointer;">确认</span>
 		<span class="clear" style="margin-left: 20px;cursor: pointer;">清空</span>
